syntax = "proto2";

package crypto.pb;

option go_package = "libp2p/crypto/pb";

enum KeyType {
	Secp256k1 = 2;
}

message PublicKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}

message PrivateKey {
	required KeyType Type = 1;
	required bytes Data = 2;
}
